@@ -1093,11 +1093,11 @@ public class MWFActivity extends X_AD_WF_Activity implements Runnable
 		if (value == null)
 			;
 		else if (displayType == DisplayType.YesNo)
-			dbValue = new Boolean("Y".equals(value));
+			dbValue = Boolean.valueOf("Y".equals(value));
 		else if (DisplayType.isNumeric(displayType))
 			dbValue = new BigDecimal (value);
 		else if (DisplayType.isID(displayType)) // Fix[3409739]DocValueWorkflow_cannot_set_var_ID_Column
-			dbValue = new Integer (value);
+			dbValue = Integer.valueOf(value);
 		else
 			dbValue = value;
 		m_po.set_ValueOfColumn(getNode().getAD_Column_ID(), dbValue);
@@ -1225,8 +1225,7 @@ public class MWFActivity extends X_AD_WF_Activity implements Runnable
 							+ (doc.getProcessMsg() != null ? doc.getProcessMsg() + Env.NL : "") 
 							+ (getTextMsg() != null ? getTextMsg() : ""))
 					.withDescription(Msg.getMsg(getCtx(), "NotApproved") + ": " + doc.getDocumentNo())
-					.withTableId(m_po.get_Table_ID())
-					.withRecordId(m_po.get_ID());
+					.withEntity(m_po);
 				//	Add to queue
 				notifier.addToQueue();
 			}
@@ -1578,8 +1577,7 @@ public class MWFActivity extends X_AD_WF_Activity implements Runnable
 				.withText(message)
 				.addAttachment(pdf)
 				.withDescription(subject)
-				.withTableId(m_po.get_Table_ID())
-				.withRecordId(m_po.get_ID());
+				.withEntity(m_po);
 			//	For user
 			if (userId != 0) {
 				notifier.addRecipient(userId);
